--- a/DPformulas.html
+++ b/DPformulas.html
@@ -10,7 +10,7 @@
   <button id="send">Send Message</button>
 </p>
 
-<iframe id="receiver" sandbox="allow-same-origin allow-scripts" src="https://woolhugger1912.github.io/DPtable.html" width="500" height="200">
+<iframe id="receiver" src="https://woolhugger1912.github.io/DPtable.html" width="500" height="200">
   <p>Your browser does not support iframes.</p>
 </iframe>
 </body>
