--- a/InvTest/parent.html
+++ b/InvTest/parent.html
@@ -23,7 +23,7 @@
   }
 
   // find gist for iframe.html
-  var iframeSource = ;
+  var iframeSource = "https://gist.github.com/WoolHugger1912/dadfb0a537e798f3f4766bf84910e5ea";
 
   // how much of this can be done html?
   var iframe = document.createElement('iframe');
