--- a/parent.html
+++ b/parent.html
@@ -17,7 +17,7 @@
   function bindEvent(element, eventName, eventHandler) {
     if (element.addEventListener){
       element.addEventListener(eventName, eventHandler, false);
-    } if else (element.attachEvent) {
+    } else if (element.attachEvent) {
       element.attachEvent('on' + eventName, eventHandler);
     }
   }
