--- a/parent.html
+++ b/parent.html
@@ -23,7 +23,7 @@
   }
 
   // find gist for iframe.html
-  var iframeSource = 'iframe.html';
+  var iframeSource = 'iframe.htm';
 
   // how much of this can be done html?
   var iframe = document.createElement('iframe');
