--- a/iframe.html
+++ b/iframe.html
@@ -30,9 +30,10 @@
     var results = document.getElementById('results'),
       messageButton = document.getElementById('message_button');
 
-    // listen to parent window messages
+    // listen to parent window messages and find way to make localStorage stick
     bindEvent(window, 'message', function (e) {
       results.innerHTML = e.data;
+      localStorage.setItem();
     });
 
     // rando numbers per click
