--- a/parent.html
+++ b/parent.html
@@ -47,7 +47,7 @@
   bindEvent(messageButton, 'click', function (e) {
     var random = Math.random();
     localStorage.setItem("parentmes", "random");
-    sendMessage(localStorage.getItem("parentmes");
+    sendMessage(localStorage.getItem("parentmes"));
   });
 
   // hear child message
