--- a/iframe.html
+++ b/iframe.html
@@ -32,8 +32,7 @@
 
     // listen to parent window messages and find way to make localStorage stick
     bindEvent(window, 'message', function (e) {
-      results.innerHTML = e.data;
-      localStorage.setItem("parentmes", e.data);
+      results.innerHTML = localStorage.getItem("parentmes");
     });
 
     // rando numbers per click
