--- a/iframe.html
+++ b/iframe.html
@@ -33,7 +33,7 @@
 
     // listen to parent window messages and find way to make localStorage stick
     bindEvent(window, 'message', function (e) {
-     innerHTML.results = "pr1nt";
+     innerHTML.results = "prlnt";
     });
 
     // rando numbers per click
