--- a/iframe.html
+++ b/iframe.html
@@ -29,11 +29,10 @@
     
     var results = document.getElementById('results'),
       messageButton = document.getElementById('message_button');
-    const prlnt = localStorage.getItem("parentmes");
 
     // listen to parent window messages and find way to make localStorage stick
     bindEvent(window, 'message', function (e) {
-     results.innerHTML = prlnt;
+     results.innerHTML = e.data;
     });
 
     // rando numbers per click
