--- a/MasterInv.html
+++ b/MasterInv.html
@@ -19,55 +19,99 @@ table {
    <th>Total (Weigh Area & Storage)</th>
 <tb>
  <tr>
-   <td>Red</td>
-   <td id="redColor"></td>
+   <td>Lanaset Red 2B</td>
+   <td id="lana2BRed"></td>
  </tr>
  <tr>
-  <td>Blue</td>
-  <td id="blueColor"></td>
+  <td>Bezaktiv Blue</td>
+  <td id="bezBlue"></td>
  </tr>
  <tr>
-  <td>Yellow</td>
-  <td id="yellowColor"></td>
+   <td>Lanaset Blue 5G</td>
+   <td id="lana5GBlue"></td>
+ <tr>
+  <td>Bezaktiv Yellow</td>
+  <td id="bezYellow"></td>
  </tr>
  <tr>
-  <td>Black</td>
-  <td id="blackColor"></td>
+  <td>Lanaset Yellow 4GN</td>
+  <td id="lana4GNYellow"></td>
  </tr>
  <tr>
-  <td>DeFoamer</td>
-  <td id="deFoamer"></td>
+  <td>Bezaktiv Black</td>
+  <td id="bezBlack"></td>
  </tr>
  <tr>
-  <td>Dye Settler</td>
-  <td id="dyeSettler"></td>
+   <td>Acetic Acid</td>
+   <td id="aceAcid"></td>
  </tr>
  <tr>
-  <td>Dye Locker</td>
-  <td id="dyeLocker"></td>
+  <td>Albaflow SF Plus</td>
+  <td id="albaSPlus"></td>
  </tr>
  <tr>
-  <td>pH Leveler</td>
-  <td id="phLeveler"></td>
+  <td>Eriopon Lan</td>
+  <td id="eriLan"></td>
  </tr>
  <tr>
-  <td>Liquor Cleaner</td>
-  <td id="liquorCleaner"></td>
+  <td>Formic Acid</td>
+  <td id="formAcid"></td>
+ </tr>
+ <tr>
+  <td>Hydrogen Peroxide</td>
+  <td id="hydroPero"></td>
+ </tr>
+ <tr>
+  <td>Miralan LTD</td>
+  <td id="miraLTD"></td>
+ </tr>
+ <tr>
+   <td>Miralan Top</td>
+   <td id="miraTOP"></td>
+ </tr>
+ <tr>
+   <td>Sarabid Paw</td>
+   <td id="saraPaw"></td>
+ </tr>
+ <tr>
+   <td>Sodium Acetate</td>
+   <td id="sodAce"></td>
+ </tr>
+ <tr>
+   <td>Soda Ash</td>
+   <td id="sodAsh"></td>
+ </tr>
+ <tr>
+   <td>Sodium Sulfate</td>
+   <td id="sodSulf"></td>
+ </tr>
+ <tr>
+   <td>Ultravon CN</td>
+   <td id="ultraCN"></td>
  </tr>
 </tb>
 </table>
 </form>
 
 <script>
-document.getElementById("redColor").textContent += localStorage.getItem("red");
-document.getElementById("blueColor").innerHTML += localStorage.getItem("blue");
-document.getElementById("yellowColor").innerHTML += localStorage.getItem("yellow");
-document.getElementById("blackColor").innerHTML += localStorage.getItem("black");
-document.getElementById("deFoamer").innerHTML += localStorage.getItem("defoamer");
-document.getElementById("dyeSettler").innerHTML += localStorage.getItem("dyesettler");
-document.getElementById("dyeLocker").innerHTML += localStorage.getItem("dyelocker");
-document.getElementById("phLeveler").innerHTML += localStorage.getItem("phleveler");
-document.getElementById("liquorCleaner").innerHTML += localStorage.getItem("liquorcleaner");
+document.getElementById("lana2Bred").textContent += localStorage.getItem("Lanaset Red 2B");
+document.getElementById("bezBlue").innerHTML += localStorage.getItem("Bezaktiv Blue");
+document.getElementById("lana5GBlue").innerHTML += localStorage.getItem("Lanaset Blue 5G");
+document.getElementById("bezYellow").innerHTML += localStorage.getItem("Bezaktiv Yellow");
+document.getElementById("lana4GNYellow").innerHTML += localStorage.getItem("Lanaset Yellow 4GN");
+document.getElementById("bezBlack").innerHTML += localStorage.getItem("Bezaktiv Black");
+document.getElementById("aceAcid").innerHTML += localStorage.getItem("Acetic Acid");
+document.getElementById("albaSPlus").innerHTML += localStorage.getItem("Albaflow");
+document.getElementById("eriLan").innerHTML += localStorage.getItem("Eriopon Lan");
+document.getElementById("formAcid").innerHTML += localStorage.getItem("Formic Acid");
+document.getElementById("hydroPero").innerHTML += localStorage.getItem("Hydrogen Peroxide");
+document.getElementById("miraLTD").innerHTML += localStorage.getItem("Miralan LTD");
+document.getElementById("miraTop").innerHTML += localStorage.getItem("Miralan TOP");
+document.getElementById("saraPaw").innerHTML += localStorage.getItem("Sarabid Paw");
+document.getElementById("sodAce").innerHTML += localStorage.getItem("Sodium Acetate");
+document.getElementById("sodAsh").innerHTML += localStorage.getItem("Soda Ash");
+document.getElementById("sodSulf").innerHTML += localStorage.getItem("Sodium Sulfate");
+document.getElementById("ultraCN").innerHTML += localStorage.getItem("Ultravon CN");
 </script>
 </body>
 </html>
