--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
-<div class="row" style="background-color: #ff00ff"></div>
+<div style="background-color: #ff00ff"></div>
 <div><a href="Stock.html" target="_blank" rel="noopener norefferer">Stock</a></div>
 <div><a href="Yarn.html" target="_blank" rel="noopener norefferer">Yarn</a></div>
 <div><a href="Piece.html" target="_blank" rel="noopener norefferer">Piece</a></div>
