--- a/Home.html
+++ b/Home.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
 <title>Home Page</title>
-<link rel="stylesheet" href="homepage.css">
+<style>
+  .tst {
+    background-color: #ff00ff;
+    height: 20 px;
+    width: 100 px;
+  }
+</style>
 </head>
 <body>
-<div style="background-color: #ff00ff"></div>
+<div class="tst"></div>
 <div><a href="Stock.html" target="_blank" rel="noopener norefferer">Stock</a></div>
 <div><a href="Yarn.html" target="_blank" rel="noopener norefferer">Yarn</a></div>
 <div><a href="Piece.html" target="_blank" rel="noopener norefferer">Piece</a></div>
