--- a/Home.html
+++ b/Home.html
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<div class="tst">hey hey hey</div>
+<div id="tst">hey hey hey</div>
 <div><a href="Stock.html" target="_blank" rel="noopener norefferer">Stock</a></div>
 <div><a href="Yarn.html" target="_blank" rel="noopener norefferer">Yarn</a></div>
 <div><a href="Piece.html" target="_blank" rel="noopener norefferer">Piece</a></div>
