--- a/Home.html
+++ b/Home.html
@@ -4,6 +4,7 @@
 <title>Home Page</title>
 <style>
   .tst {
+    text-align: center;
     background-color: #ff00ff;
     height: 20 px;
     width: 100 px;
