--- a/Home.html
+++ b/Home.html
@@ -5,14 +5,24 @@
 <style>
   .tst {
     background-color: #ff00ff;
-    text-align: center;
     height: 20 px;
     width: 100 px;
+    text-align: center;
   }
 </style>
 </head>
 <body>
-<div id="tst">hey hey hey</div>
+<div class="tst">hey hey hey</div>
+<div id="stockCab">
+<input list="dyeNum">
+<datalist id="dyeNum">
+<option>001-181</option>
+<option>188-2000</option>
+<option>A-Z</option>
+<option>M01-N88</option>
+<option>N89-S99</option>
+</datalist>
+</div>
 <div><a href="Stock.html" target="_blank" rel="noopener norefferer">Stock</a></div>
 <div><a href="Yarn.html" target="_blank" rel="noopener norefferer">Yarn</a></div>
 <div><a href="Piece.html" target="_blank" rel="noopener norefferer">Piece</a></div>
