--- a/Home.html
+++ b/Home.html
@@ -12,8 +12,8 @@
 </style>
 </head>
 <body>
-<div class="tst">hey hey hey</div>
-<div id="stockCab">
+<div id="tst">hey hey hey</div>
+<div class="stockCab">
 <input list="dyeNum">
 <datalist id="dyeNum">
 <option>001-181</option>
