--- a/Home.html
+++ b/Home.html
@@ -1,30 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Home Page</title>
-<style>
-  .tst {
-    background-color: #ff00ff;
-    height: 20 px;
-    width: 100 px;
-    text-align: center;
-  }
-</style>
+<title>Dye House Master Inventory</title>
+<link rel="stylesheet" href="CSS/Home.css">
 </head>
 <body>
-<div id="tst">hey hey hey</div>
-<div class="stockCab">
-<input list="dyeNum">
-<datalist id="dyeNum">
-<option>001-181</option>
-<option>188-2000</option>
-<option>A-Z</option>
-<option>M01-N88</option>
-<option>N89-S99</option>
-</datalist>
+<div id="ban-ner">
+    <h1>Dye House Master Inventory</h1>
+
+
+<div class="dip-type">
+  <button class="cabinets">Stock</button>
+  <div class="drawers">
+    <a href="BoilOut.html">Boil Out</a>
+    <a href="Stock/001-181.html">001-181</a>
+    <a>188-2000</a>
+    <a>A-Z</a>
+    <a>M01-N88</a>
+    <a>N89-S99</a>
+  </div>
 </div>
-<div><a href="Stock.html" target="_blank" rel="noopener norefferer">Stock</a></div>
-<div><a href="Yarn.html" target="_blank" rel="noopener norefferer">Yarn</a></div>
-<div><a href="Piece.html" target="_blank" rel="noopener norefferer">Piece</a></div>
+
+<div class="dip-type">
+  <button class="cabinets">Yarn</button>
+  <div class="drawers">
+    <a href="BoilOut.html">Boil Out</a>
+    <a href="Stock/001-181.html">001-181</a>
+    <a>188-2000</a>
+    <a>A-Z</a>
+    <a>M01-N88</a>
+    <a>N89-S99</a>
+  </div>
+</div>
+
+<div class="dip-type">
+  <button class="cabinets">Piece</button>
+  <div class="drawers">
+    <a href="BoilOut.html">Boil Out</a>
+    <a href="Stock/001-181.html">001-181</a>
+    <a>188-2000</a>
+    <a>A-Z</a>
+    <a>M01-N88</a>
+    <a>N89-S99</a>
+  </div>
+</div>
+
+
+<div class="dip-type">
+  <button class="cabinets">Inventory</button>
+  <div class="drawers">
+    <a href="MasterInv.html" target="_blank" rel="noopener norefferer">Master Inventory</a>
+    <a href="InvUpd.html">Update Inventory</a>
+  <div class="boilout">
+    <button class="slot">Update Inventory</button>
+    <div class="mach">
+      <a href="FormPageTemp.html">Chemicals</a>
+      <a href="FormPageTemp.html">Dyes</a>
+    </div>
+  </div>
+</div>
+
+
+<!--Drop down menu with working links, changed to hover div for visuals-->
+<!--<select id="stockDye">
+  <option>Stock</option>
+  <option value="FormPageTemp.html">001-181</option>
+  <option>188-2000</option>
+  <option>A-Z</option>
+  <option>M01-N88</option>
+  <option>N89-S99</option>
+</select>-->
+
+
+</div>
+</div>
+<script>
+
+// Javascript for drop down menu. Swaps the link with option value when the select box changes.
+// document.getElementById("stockDye").onchange = function() {
+//  if (this.selectedIndex!==0) {
+//    window.location.href = this.value;
+//    this.value = "Stock";
+//  }
+// };
+
+</script>
 </body>
 </html>
