--- a/Home.html
+++ b/Home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Dye House Master Inventory</title>
 <link rel="stylesheet" href="CSS/Home.css">
 </head>
