--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Dye House Master Inventory</title>
-<link rel="stylesheet" href="CSS/Home.css">
+<link rel="stylesheet" href="Home.css">
 </head>
 <body>
 <div id="ban-ner">
