--- a/Home.html
+++ b/Home.html
@@ -14,7 +14,7 @@
   <button class="cabinets">Stock</button>
   <div class="drawers">
     <a href="BoilOut.html">Boil Out</a>
-    <a href="Stock/001-181.html">001-181</a>
+    <a href="001-181.html">001-181</a>
     <a>188-2000</a>
     <a>A-Z</a>
     <a>M01-N88</a>
