--- a/final/Home.html
+++ b/final/Home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Dye House Master Inventory</title>
-<link rel="stylesheet" href="css/Home.css">
+<link rel="stylesheet" href="Home.css">
 </head>
 <body>
  <div id="ban-ner">
@@ -15,7 +15,7 @@
       <div class="cabrange">
       <button class="colrange">001-499</button>
       <div class="col">
-        <a href="Stock/001-181.html" target="_blank" rel="noopener norefferer">001-112</a>
+        <a href="001-181.html" target="_blank" rel="noopener norefferer">001-112</a>
         <a>113-128</a>
         <a>129-181</a>
         <a>188-299</a>
@@ -69,7 +69,7 @@
       <button class="colrange">172-285</button>
       <div class="col">
         <a>172-192</a>
-        <a href="Yarn/193-205.html" target="_blank" rel="noopener norefferer">193-205</a>
+        <a href="193-205.html" target="_blank" rel="noopener norefferer">193-205</a>
         <a>206-237</a>
         <a>239-285</a>
       </div>
@@ -166,14 +166,14 @@
         <a>2095-2120</a>
         <a>2121-2159</a>
         <a>2160-2210</a>
-        <a href="Piece/2211-2240.html" target="_blank" rel="noopener norefferer">2211-2240</a>
+        <a href="2211-2240.html" target="_blank" rel="noopener norefferer">2211-2240</a>
       </div>
   </div>
   <div class="cabrange">
     <button class="colrange">2241-6424</button>
     <div class="col">
       <a>2241-2280</a>
-      <a href="Piece/2281-2295.html" target="_blank" rel="noopener norefferer">2281-2295</a>
+      <a href="2281-2295.html" target="_blank" rel="noopener norefferer">2281-2295</a>
       <a>2296-2319</a>
       <a>2320-6424</a>
     </div>
