--- a/final/Home.html
+++ b/final/Home.html
@@ -210,8 +210,8 @@
       <input id="passWord" class="us-Er" type="password" placeholder="Please enter Password" name="passWord">
       <br>
       <br>
-      <button class="but-ton" id="sT" onclick="subMit(); document.getElementById('userName').value = ''; document.getElementById('passWord').value = ''">Submit</button>
-      <button class="but-ton" onclick="loGin(); document.getElementById('passWord').value = ''; document.getElementById('userName').value = ''">Cancel</button>
+      <button class="but-ton" id="sT" onclick="subMit(); loGin(); document.getElementById('userName').value = ''; document.getElementById('passWord').value = ''">Submit</button>
+      <button class="but-ton" onclick="loGin()">Cancel</button>
     </div>
  </div>
   
