--- a/final/Home.html
+++ b/final/Home.html
@@ -190,10 +190,10 @@
   <div class="boilout">
     <button class="slot">Update Inventory</button>
     <div class="mach">
-      <a href="ChemsUpd.html">Chemicals</a>
-      <a href="DyesUpd.html">Dyes</a>
-      <a href="AdvUpd.html">Advanced</a>
-      <a href="Button.html">Fill</a>
+      <a href="ChemsUpd.html" target="_blank" rel="noopener norefferer">Chemicals</a>
+      <a href="DyesUpd.html" target="_blank" rel="noopener norefferer">Dyes</a>
+      <a href="AdvUpd.html" target="_blank" rel="noopener norefferer">Advanced</a>
+      <a href="Button.html" target="_blank" rel="noopener norefferer">Fill</a>
     </div>
   </div>
   </div>
