--- a/final/Home.html
+++ b/final/Home.html
@@ -192,7 +192,7 @@
     <div class="mach">
       <a href="ChemsUpd.html" target="_blank" rel="noopener norefferer">Chemicals</a>
       <a href="DyesUpd.html" target="_blank" rel="noopener norefferer">Dyes</a>
-      <a href="AdvUpd.html" target="_blank" rel="noopener norefferer">Advanced</a>
+      <a href="AdvUpd.txt" target="_blank" rel="noopener norefferer">Advanced</a>
       <a href="Button.html" target="_blank" rel="noopener norefferer">Fill</a>
     </div>
   </div>
