--- a/final/Home.html
+++ b/final/Home.html
@@ -28,10 +28,10 @@
         <a>500-2000</a>
         <a>A-G</a>
         <a>H-Z</a>
-        <a>T01-Z</a>
       </div>
       </div>
-      <div class="cabrange">
+<!--M01 - S99 are shade checks, 398 - 549 are absent. Irrelevant till further notice.-->
+      <!--<div class="cabrange">
       <button class="colrange">M01-S99</button>
       <div class="col">
         <a>M01-M49</a>
@@ -48,7 +48,7 @@
       <a>510-529</a>
       <a>530-549</a>
     </div>
-      </div>
+      </div>-->
     </div>
   </div>
 
